# Shit

./: .replit  audit_report.md  full_content.txt  index.html  index_body.txt  main.py  pyproject.toml  replit.md  script.js  style.css
attached_assets/: Pasted-YOU-must-follow-this-logic-strictly-1-AFTER-APPLICATION_1769535662616.txt
public/: index.html
public/admin/: admin.js  application.html  index.html
public/css/: style.css
public/dashboard/: dashboard.js  index.html
public/js/: script.js  supabase_functions.js
server/: app.py  main.py  models.py
supabase/functions/send-email/: index.ts
